--- a/web_PD3.html
+++ b/web_PD3.html
@@ -10,7 +10,7 @@
     <p>Josep López és un personatge de la mítica sèrie catalana <em>Plats Bruts</em>. Aquest personatge destaca pel seu estat d'ànim pessimista i hipocondríac, i pel fet de reivindicar la seva nacionalitat, la catalana. En diversos capítols apareix ballant sardanes i, a més a més, en un dels capítols més mítics de la sèrie, té un paper molt important la "consciència catalana" d'en López. Un personatge que representa que és el mateix López qui es mostra preocupat per la possible futura desaparició de la cultura i la llengua catalana.</p>
     
     <p>A continuació podeu veure una imatge de la vestimenta de l'anteriorment anomenada consciència catalana d'en López.</p>
-    <img src="conciencia_catalana_petita.jpg" alt="No s'ha pogut mostrar la imatge" />
+    <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2cKr3cZfX0LzeWopBYSDitRdnPBAJ3zee-16H8U2rL7UY1FaokPuSQzSup4RnDrn7s7U&usqp=CAU' alt='Imatge'/>
 
     <h2>Plats Bruts, la sèrie</h2>
     <p><em>Plats Bruts</em> és una sèrie de producció catalana que fou estrenada l'any 1999. Gira al voltant de la vida de dos personatges amb estils de vida totalment diferents, però amb un denominador comú: el pis on viuen.</p>
